--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -64,7 +64,7 @@
                 </a>
                 <ng-container *ngIf="notifications$ | async as notifications">
                   <div
-                    class="content position-absolute bg-white end-0"
+                    class="content position-absolute bg-white end-0 customize-scrollbar"
                     *ngIf="showNotification">
                     <h6>Thông báo</h6>
                     <div class="notification-wrapper">
