--- a/src/app/pages/account-profile/purchase-order/purchase-order.component.html
+++ b/src/app/pages/account-profile/purchase-order/purchase-order.component.html
@@ -78,7 +78,9 @@
               ></a>
               <a
                 [ngbTooltip]="'Huỷ đơn'"
-                *ngIf="order.status === 'waitVerify'"
+                *ngIf="
+                  order.status === 'waitVerify' || order.status === 'verified'
+                "
                 class="view cancel cursor-pointer bg-black"
                 (click)="onCancelOrder(order.id)">
                 <i class="fa-regular fa-circle-xmark"></i>
