--- a/src/app/pages/collections/collections.component.scss
+++ b/src/app/pages/collections/collections.component.scss
@@ -101,11 +101,7 @@
 
 @media only screen and (max-width: 1000px) {
   .hide-filter {
-    display: none;
-  }
-
-  .filter-container {
-    justify-content: center;
+    display: none !important;
   }
 }
 
@@ -113,7 +109,7 @@
   .filter-dropdown {
     position: fixed !important;
     max-width: 92vw !important;
-    top: 44% !important;
+    top: 50% !important;
     left: calc(50% - 1.5vw) !important;
     transform: translate(-50%, -50%) !important;
   }
@@ -129,20 +125,8 @@
   .filter-dropdown {
     position: fixed !important;
     max-width: 96vw !important;
-    top: 44% !important;
+    top: 50% !important;
     left: 50% !important;
     transform: translate(-50%, -50%) !important;
   }
-}
-
-::-webkit-scrollbar {
-  width: 5px;
-}
-
-::-webkit-scrollbar-track {
-  background-color: rgb(209, 204, 204);
-}
-
-::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
