--- a/src/styles.scss
+++ b/src/styles.scss
@@ -119,3 +119,17 @@ h6 {
 .card-header {
   background-color: $white;
 }
+
+.customize-scrollbar {
+  ::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: rgb(209, 204, 204);
+  }
+
+  ::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+}
