--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,7 +6,11 @@
           <div class="widget-footer">
             <h6 class="title-widget mb-4 text-uppercase">Về watchstore</h6>
             <ul class="footer-list">
-              <li><a>Về Chúng Tôi</a></li>
+              <li
+                (click)="router.navigate(['/about']).then()"
+                class="cursor-pointer">
+                <a>Về Chúng Tôi</a>
+              </li>
               <li><a>Kiến thức về đồng hồ</a></li>
               <li><a>Tin tức</a></li>
             </ul>
@@ -29,10 +33,8 @@
               <li><a>Chính sách bảo hành</a></li>
               <li><a>Chính sách bảo mật</a></li>
               <li><a>Chính sách vận chuyển</a></li>
-              <li
-                class="cursor-pointer"
-                (click)="router.navigate(['/return-policy'])">
-                <a>Chính sách đổi trả</a>
+              <li class="cursor-pointer">
+                <a href="/return-policy">Chính sách đổi trả</a>
               </li>
             </ul>
           </div>
