--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -1,11 +1,6 @@
 @import "text-size";
 @import "color";
 
-.swiper-custom img {
-  height: 200px;
-  object-fit: contain;
-}
-
 .heading {
   color: $primary-color;
   margin: 0 auto;
@@ -29,48 +24,31 @@
   }
 }
 
-.dsch_list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+.store-list-container {
+  max-width: 600px;
 }
 
-.item_dsch_list {
+.store-item {
   border: 1px solid #bdbdbd;
   border-radius: 8px;
-  width: calc(33% - 15px);
-  overflow: hidden;
-  margin: 5px;
 
   h4 {
     border-bottom: 1px solid #bdbdbd;
     padding-left: 20px;
     padding-right: 20px;
-    margin: 0px;
-    padding-top: 15px;
-    padding-bottom: 15px;
     line-height: 1;
     font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
     background: #f1f3f4;
   }
 
   .ct_cd {
     padding-left: 20px;
     padding-right: 20px;
-    margin: 0px;
-    font-size: 14px;
-    padding-top: 15px;
-    padding-bottom: 15px;
     line-height: 1;
 
     p {
-      margin: 0px;
-      margin-bottom: 12px;
       line-height: 20px;
       font-style: normal;
-      font-weight: 400;
     }
   }
 }
