--- a/src/app/pages/order-history/order-history.component.html
+++ b/src/app/pages/order-history/order-history.component.html
@@ -71,7 +71,7 @@
                             <p class="text-muted mb-0">
                               Size:
                               <span class="fw-medium">{{
-                                product?.productSize?.name
+                                product?.productSizeName
                               }}</span>
                             </p>
                           </div>
