--- a/src/app/pages/checkout/checkout.component.scss
+++ b/src/app/pages/checkout/checkout.component.scss
@@ -3,7 +3,7 @@
 .coupon-accordion {
   h3 {
     background: #f6f6f6;
-    border-top: 3px solid #c89979;
+    border-top: 3px solid $primary-color;
     color: #515151;
     font-size: 14px;
     font-weight: 400;
@@ -13,7 +13,7 @@
     text-transform: capitalize;
 
     .coupon {
-      color: #c89979;
+      color: $primary-color;
       cursor: pointer;
       transition: 0.4s;
     }
@@ -44,7 +44,7 @@
 
   input {
     border: 1px solid #999999;
-    color: #000000;
+    color: $black;
     padding: 5px 10px;
     width: 100%;
     font-size: 14px;
@@ -184,7 +184,6 @@ h5 {
 
 .coupon-item {
   padding: 10px;
-  cursor: pointer;
 
   &:hover {
     color: $primary-color;
