--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,14 +13,6 @@
           </div>
         </div>
 
-        <div
-          class="mobile-menu-icon d-flex align-items-center justify-content-end d-lg-none col-2"
-          data-bs-toggle="offcanvas"
-          data-bs-target="#offcanvasExample"
-          aria-controls="offcanvasExample">
-          <span class="material-symbols-outlined"> menu </span>
-        </div>
-
         <div class="col-lg-6 d-none d-lg-block">
           <div class="search-box-wrapper position-relative d-flex">
             <input
@@ -38,20 +30,37 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-sm-8 d-none d-lg-block">
-          <div class="d-flex justify-content-end">
+
+        <div
+          class="col-3 d-flex align-items-center justify-content-end d-xl-none">
+          <div class="position-relative">
+            <a
+              class="cursor-pointer"
+              (click)="
+                router.navigate(['/cart']).then(); $event.stopPropagation()
+              ">
+              <span class="material-symbols-outlined"> shopping_cart </span>
+              <span
+                *ngIf="productList$ | async as productList"
+                class="total fw-500 rounded-circle bg-primary-color color-white float-left text-size-xx-small position-absolute text-center text-capitalize"
+                style="right: -10px !important"
+                >{{ productList.length }}
+              </span>
+            </a>
+          </div>
+
+          <div
+            class="mobile-menu-icon ms-3"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasExample"
+            aria-controls="offcanvasExample">
+            <span class="material-symbols-outlined"> menu </span>
+          </div>
+        </div>
+
+        <div class="col-xl-3 col-sm-8 d-none d-xl-block">
+          <div class="d-flex justify-content-end align-items-center">
             <ng-container *ngIf="userInfo$ | async">
-              <!-- <div
-                class="wishlist-wrapper pe-2 me-3 position-relative"
-                (click)="router.navigate(['/favorite']).then()">
-                <a class="cursor-pointer">
-                  <span class="material-symbols-outlined"> favorite </span>
-                  <span
-                    class="card-total fw-500 rounded-circle bg-primary-color color-white float-left text-size-xx-small position-absolute text-center text-capitalize">
-                    2
-                  </span>
-                </a>
-              </div> -->
               <div
                 class="notification pe-2 me-3 position-relative"
                 (click)="onShowNotification($event)">
@@ -92,93 +101,94 @@
                   </div>
                 </ng-container>
               </div>
-              <div class="cart-wrapper pe-2 me-3 position-relative">
-                <a
-                  class="cursor-pointer"
-                  (click)="$event.stopPropagation()"
-                  (click)="router.navigate(['/cart']).then()">
-                  <span class="material-symbols-outlined"> shopping_cart </span>
-                  <span
-                    *ngIf="productList$ | async as productList"
-                    class="total fw-500 rounded-circle bg-primary-color color-white float-left text-size-xx-small position-absolute text-center text-capitalize"
-                    >{{ productList.length }}
-                  </span>
-                </a>
-                <ul class="mini-cart position-absolute bg-white end-0">
-                  <ng-container *ngIf="productList$ | async as productList">
-                    <ng-container *ngIf="productList.length; else noProducts">
-                      <li
-                        class="cart-item d-flex position-relative pb-3"
-                        *ngFor="let product of productList">
-                        <div class="card-image cursor-pointer">
-                          <img
-                            [src]="
-                              createCloudinaryThumbLink(
-                                product?.productCoverImage
-                              )
-                            "
-                            alt=""
-                            class="mw-100" />
-                        </div>
-                        <div class="card-title ps-3 mt-2">
-                          <a class="pe-3 cursor-pointer">
-                            <h4 class="text-size-small fw-normal">
-                              {{ product?.productName }} ({{
-                                product?.productSizeName
-                              }})
-                            </h4>
-                          </a>
-                          <div class="quanti-price-wrap d-flex">
-                            <span class="quantity me-1"
-                              >{{ product?.quality }} ×</span
-                            >
-                            <div class="price-box fw-500 color-brown">
-                              <span class="new-price"
-                                >{{ product?.price | formatPrice }}đ</span
-                              >
-                            </div>
-                          </div>
-                          <div
-                            (click)="removeCartItem(product.productPriceId)"
-                            class="remove-from-cart position-absolute end-0 cursor-pointer">
-                            <i
-                              class="fa-regular fa-circle-xmark text-size-large"></i>
-                          </div>
-                        </div>
-                      </li>
-                    </ng-container>
-                  </ng-container>
-                  <ng-template #noProducts>
-                    <div
-                      class="d-flex align-items-center mb-3 justify-content-center">
-                      <span class="material-symbols-outlined me-2">
-                        shopping_cart_off
-                      </span>
-                      <h6>Giỏ hàng trống</h6>
-                    </div>
-                  </ng-template>
-                  <li class="subtotal-box pt-3">
-                    <div
-                      class="subtotal-title d-flex justify-content-between color-brown text-size-small fw-600">
-                      <h3 class="text-size-small fw-600 m-0 color-brown">
-                        Tổng tiền : {{ total | formatPrice }}đ
-                      </h3>
-                      <span></span>
-                    </div>
-                  </li>
-                  <li class="mini-cart-btns justify-content-between pt-3 w-100">
-                    <div class="cart-btns">
-                      <a (click)="router.navigate(['/cart']).then()"
-                        >Xem giỏ hàng</a
-                      >
-                      <a (click)="router.navigate(['/checkout']).then()"
-                        >Thanh toán</a
-                      >
-                    </div>
-                  </li>
-                </ul>
-              </div>
             </ng-container>
+            <div class="cart-wrapper pe-2 me-3 position-relative">
+              <a
+                class="cursor-pointer"
+                (click)="
+                  router.navigate(['/cart']).then(); $event.stopPropagation()
+                ">
+                <span class="material-symbols-outlined"> shopping_cart </span>
+                <span
+                  *ngIf="productList$ | async as productList"
+                  class="total fw-500 rounded-circle bg-primary-color color-white float-left text-size-xx-small position-absolute text-center text-capitalize"
+                  >{{ productList.length }}
+                </span>
+              </a>
+              <ul class="mini-cart position-absolute bg-white end-0">
+                <ng-container *ngIf="productList$ | async as productList">
+                  <ng-container *ngIf="productList.length; else noProducts">
+                    <li
+                      class="cart-item d-flex position-relative pb-3"
+                      *ngFor="let product of productList">
+                      <div class="card-image cursor-pointer">
+                        <img
+                          [src]="
+                            createCloudinaryThumbLink(
+                              product?.productCoverImage
+                            )
+                          "
+                          alt=""
+                          class="mw-100" />
+                      </div>
+                      <div class="card-title ps-3 mt-2">
+                        <a class="pe-3 cursor-pointer">
+                          <h4 class="text-size-small fw-normal">
+                            {{ product?.productName }} ({{
+                              product?.productSizeName
+                            }})
+                          </h4>
+                        </a>
+                        <div class="quanti-price-wrap d-flex">
+                          <span class="quantity me-1"
+                            >{{ product?.quality }} ×</span
+                          >
+                          <div class="price-box fw-500 color-brown">
+                            <span class="new-price"
+                              >{{ product?.price | formatPrice }}đ</span
+                            >
+                          </div>
+                        </div>
+                        <div
+                          (click)="removeCartItem(product.productPriceId)"
+                          class="remove-from-cart position-absolute end-0 cursor-pointer">
+                          <i
+                            class="fa-regular fa-circle-xmark text-size-large"></i>
+                        </div>
+                      </div>
+                    </li>
+                  </ng-container>
+                </ng-container>
+                <ng-template #noProducts>
+                  <div
+                    class="d-flex align-items-center mb-3 justify-content-center">
+                    <span class="material-symbols-outlined me-2">
+                      shopping_cart_off
+                    </span>
+                    <h6>Giỏ hàng trống</h6>
+                  </div>
+                </ng-template>
+                <li class="subtotal-box pt-3">
+                  <div
+                    class="subtotal-title d-flex justify-content-between color-brown text-size-small fw-600">
+                    <h3 class="text-size-small fw-600 m-0 color-brown">
+                      Tổng tiền : {{ total | formatPrice }}đ
+                    </h3>
+                    <span></span>
+                  </div>
+                </li>
+                <li class="mini-cart-btns justify-content-between pt-3 w-100">
+                  <div class="cart-btns">
+                    <a (click)="router.navigate(['/cart']).then()"
+                      >Xem giỏ hàng</a
+                    >
+                    <a (click)="router.navigate(['/checkout']).then()"
+                      >Thanh toán</a
+                    >
+                  </div>
+                </li>
+              </ul>
+            </div>
 
             <!-- GET THIS IF NOT LOGIN  -->
             <div *ngIf="!(userInfo$ | async)" class="cursor-pointer">
@@ -435,16 +445,6 @@
           ><span class="material-symbols-outlined text-size-2xl">list_alt</span>
           <div class="text-size-x-small">
             <span class="fw-500">Đơn mua</span>
-          </div></a
-        ><a
-          class="w-100"
-          (click)="router.navigate(['/cart']).then()"
-          data-bs-dismiss="offcanvas"
-          ><span class="material-symbols-outlined text-size-2xl"
-            >shopping_cart</span
-          >
-          <div class="text-size-x-small">
-            <span class="fw-500">Giỏ hàng</span>
           </div></a
         ><a
           class="menu-half-w"
