--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -25,7 +25,7 @@
         <div class="row">
           <div class="col-lg-6 col-md-6">
             <div class="billing-details-wrap">
-              <h3 class="shoping-checkboxt-title">Thông tin đặt hàng</h3>
+              <h3 class="shoping-checkboxt-title">Thông tin người nhận</h3>
               <div class="row">
                 <ng-container formGroupName="order">
                   <div class="col-lg-12 form-group pb-4" required>
