--- a/src/app/pages/account-profile/account-profile.component.html
+++ b/src/app/pages/account-profile/account-profile.component.html
@@ -15,13 +15,13 @@
               <div class="col-lg-4 col-md-12">
                 <div class="d-single-info">
                   <p>Cần hỗ trợ? Hỗ trợ khách hàng</p>
-                  <p>lemailinh22&#64;gmail.com</p>
+                  <p>info&#64;watchstore.vn</p>
                 </div>
               </div>
               <div class="col-lg-3 col-md-12">
                 <div class="d-single-info">
                   <p>E-mail cho chúng tôi</p>
-                  <p>lemailinh22&#64;gmail.com</p>
+                  <p>info&#64;watchstore.vn</p>
                 </div>
               </div>
               <div class="col-lg-2 col-md-12">
