--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -50,7 +50,7 @@
     </div>
   </div>
 
-  <app-blog></app-blog>
+  <app-promotion-area></app-promotion-area>
 
   <app-our-partners></app-our-partners>
 
